--- a/app/src/main/res/drawable/arrow_left_selector.xml
+++ b/app/src/main/res/drawable/arrow_left_selector.xml
@@ -15,7 +15,7 @@
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false"
-        android:drawable="@android:color/transparent" />
+        android:drawable="@drawable/arrow_left_normal" />
     <item android:state_pressed="true"
-        android:drawable="@drawable/candidate_hl_bg" />
+        android:drawable="@drawable/arrow_left_hl" />
 </selector>
