--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,11 @@
     <color name="label_color_hl0">#ffffffff</color>
     <color name="balloon_color">#ff000000</color>
     <color name="candidate_color">#ff000000</color>
-    <color name="active_candidate_color">#ff000000</color>
-    <color name="recommended_candidate_color">#ffe35900</color>
+    <color name="active_candidate_color">#5090FF</color>
+    <color name="recommended_candidate_color">#5090FF</color>
     <color name="footnote_color">#ff343233</color>
     <color name="composing_color">#ff000000</color>
-    <color name="composing_color_hl">#ffffffff</color>
+    <color name="composing_color_hl">#5090FF</color>
     <color name="composing_color_idle">#ff777777</color>
 
     <color name="color_E2EDFC">#E2EDFC</color>
