--- a/app/src/main/res/layout/composing_container.xml
+++ b/app/src/main/res/layout/composing_container.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<?xml version="1.0" encoding="UTF-8"?><!-- Copyright (C) 2009 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,14 +13,18 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/floating_container"
-  android:orientation="vertical"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content">
-
-  <com.android.inputmethod.pinyin.ComposingView
-    android:id="@+id/composing_view"
-    android:background="@drawable/composing_area_bg"
+    android:id="@+id/floating_container"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <com.android.inputmethod.pinyin.ComposingView
+        android:id="@+id/composing_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/composing_view_bg"
+        android:paddingLeft="17px"
+        android:paddingTop="11px"
+        android:paddingRight="17px"
+        android:paddingBottom="11px" />
 </LinearLayout>
