--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
 -->
 <resources>
   <dimen name="candview_background_padding">0dip</dimen>
+  <dimen name="candidate_margin_left_right">10dip</dimen>
+  <dimen name="composing_height">10dip</dimen>
 </resources>
