--- a/app/src/main/res/drawable/candidate_balloon_hint_bg.xml
+++ b/app/src/main/res/drawable/candidate_balloon_hint_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="21px"/>
-    <stroke android:width="2px" android:color="#E5E8EB"/>
+    <solid android:color="#FFFFFF" />
+    <corners android:radius="18px"/>
 </shape>
