--- a/app/src/main/res/drawable/candidate_bg.xml
+++ b/app/src/main/res/drawable/candidate_bg.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#FAFCFF" />
-    <corners android:topLeftRadius="21px"
-            android:topRightRadius="21px"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:bottom="-2dp">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="#FAFCFF" />
+            <corners
+                android:topLeftRadius="21px"
+                android:topRightRadius="21px" />
+            <stroke
+                android:width="1px"
+                android:color="#E1E5EB" />
+        </shape>
+    </item>
+</layer-list>
