--- a/app/src/main/res/xml/skb_sym1.xml
+++ b/app/src/main/res/xml/skb_sym1.xml
@@ -16,18 +16,20 @@
 <keyboard
   skb_template="@xml/skb_template1"
   skb_cache_flag="true"
-  width="10%p"
-  height="25%p"
+  key_xmargin="0.607%p"
+  key_ymargin="1.960%p"
+  width="9.311%p"
+  height="23.529%p"
   key_type="0"
   repeat="false"
   balloon="true">
 
-  <row>
+  <row start_pos_x="3.441%p" start_pos_y="2.941%p">
     <keys splitter="|" labels="1|2|3|4|5|6|7|8|9|0"
       codes="8|9|10|11|12|13|14|15|16|7"/>
   </row>
 
-  <row>
+  <row start_pos_x="3.441%p" start_pos_y="26.470%p">
     <keys splitter="|" labels="\@|#"/>
     <key label="￥">
       <toggle_state state_id="@string/toggle_en_sym1" label="$"/>
@@ -36,16 +38,15 @@
     <key label="—">
       <toggle_state state_id="@string/toggle_en_sym1" label="-"/>
     </key>
-    <key label="、" icon="@drawable/dun_icon"
-      icon_popup="@drawable/dun_popup_icon">
+    <key label="、">
       <toggle_state state_id="@string/toggle_en_sym1" label="/"/>
     </key>
     <keys splitter="|" labels="(|)"/>
   </row>
 
-  <row width="10.205%p">
-    <key code="-5" width="14.286%p" key_type="2" label="ALT"/>
-    <key label="！">
+  <row start_pos_x="3.441%p" start_pos_y="50%p">
+    <key code="-5" width="12.55%p" key_type="1" label="ALT"/>
+    <key start_pos_x="17.476%p" label="！">
       <toggle_state state_id="@string/toggle_en_sym1" label="!"/>
     </key>
     <key label="“">
@@ -66,23 +67,29 @@
     <key label="？">
       <toggle_state state_id="@string/toggle_en_sym1" label="\?"/>
     </key>
-    <key id="3"/>
+    <key start_pos_x="84.008%p" width="12.55%p" code="67" key_type="1" repeat="true"/>
   </row>
 
-  <row width="14.696%p" key_type="1">
-    <key code="-2" label="中 符" width="20%p" repeat="true">
+  <row start_pos_x="3.441%p" start_pos_y="73.529%p">
+    <key code="-2" label="中 符" width="12.55%p" repeat="true" key_type="1">
       <toggle_state state_id="@string/toggle_en_sym1" label="英 符" code="-2"/>
     </key>
-    <key code="-3" key_type="3" label="\?123"/>
-    <key code="62" key_type="5" width="30.608%p"/>
-    <key label="。" key_type="0" icon="@drawable/period_full_icon"
-      icon_popup="@drawable/period_full_popup_icon">
+    <key code="-3" key_type="1" width="12.55%p" label="\?123"/>
+    <key code="62" key_type="0" width="38.056%p" label="Space"/>
+    <key label="。" key_type="0" width="12.55%p" >
       <toggle_state state_id="@string/toggle_en_sym1" label="."
-        icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
+        />
       <toggle_state state_id="@string/toggle_en_upper" label="."
-        icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
+        />
     </key>
-    <key id="1"/>
+    <key width="17.408%p"  code="66" key_type="1">
+      <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
+      <toggle_state state_id="@string/toggle_enter_search" code="66"
+          icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+      <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
+      <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
+      <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
+    </key>
   </row>
 </keyboard>
 
