--- a/app/src/main/res/xml/skb_phone.xml
+++ b/app/src/main/res/xml/skb_phone.xml
@@ -37,7 +37,7 @@
         <key code="66" key_type="1" balloon="false">
             <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
             <toggle_state state_id="@string/toggle_enter_search" code="66"
-                icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+                icon="@drawable/search_icon" icon_popup="@drawable/search_icon"/>
             <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
             <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
             <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
