--- a/app/src/main/res/xml/skb_qwerty.xml
+++ b/app/src/main/res/xml/skb_qwerty.xml
@@ -80,7 +80,7 @@
     <key width="17.408%p"  code="66" key_type="1">
       <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
       <toggle_state state_id="@string/toggle_enter_search" code="66"
-          icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+          icon="@drawable/search_icon" icon_popup="@drawable/search_icon"/>
       <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
       <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
       <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
@@ -99,7 +99,7 @@
     <key width="17.408%p"  code="66" key_type="1">
       <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
       <toggle_state state_id="@string/toggle_enter_search" code="66"
-          icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+          icon="@drawable/search_icon" icon_popup="@drawable/search_icon"/>
       <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
       <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
       <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
@@ -119,7 +119,7 @@
     <key width="17.408%p"  code="66" key_type="1">
       <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
       <toggle_state state_id="@string/toggle_enter_search" code="66"
-          icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+          icon="@drawable/search_icon" icon_popup="@drawable/search_icon"/>
       <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
       <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
       <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
@@ -139,7 +139,7 @@
     <key width="17.408%p"  code="66" key_type="1">
       <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
       <toggle_state state_id="@string/toggle_enter_search" code="66"
-          icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+          icon="@drawable/search_icon" icon_popup="@drawable/search_icon"/>
       <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
       <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
       <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
