--- a/app/src/main/res/xml/skb_template1.xml
+++ b/app/src/main/res/xml/skb_template1.xml
@@ -43,11 +43,7 @@
 
   <!-- Default icons for enter key -->
   <key_icon code="66" icon="@drawable/enter_icon"
-    icon_popup="@drawable/enter_popup_icon"/>
-
-  <!-- Default icons for space key -->
-  <key_icon code="62" icon="@drawable/space_icon"
-    icon_popup="@drawable/space_popup_icon"/>
+    icon_popup="@drawable/enter_icon"/>
 
   <!-- Default icons for delete key -->
   <key_icon code="67" icon="@drawable/delete_icon"
@@ -59,7 +55,7 @@
     width="20%p" height="25%p" code="66" key_type="1">
     <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
     <toggle_state state_id="@string/toggle_enter_search" code="66"
-      icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+      icon="@drawable/search_icon" icon_popup="@drawable/search_icon"/>
     <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
     <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
     <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
@@ -70,7 +66,7 @@
     width="25%p" height="25%p" code="66" key_type="1" balloon="false">
     <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66"/>
     <toggle_state state_id="@string/toggle_enter_search" code="66"
-      icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon"/>
+      icon="@drawable/search_icon" icon_popup="@drawable/search_icon"/>
     <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66"/>
     <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66"/>
     <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66"/>
@@ -100,7 +96,7 @@
   <!-- Period key(English mode). -->
   <key id="7" start_pos_x="65.304%p" start_pos_y="75%p"
       width="14.696%p" height="25%p" label="." key_type="0"
-      icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
+      icon="@drawable/period_popup_icon" icon_popup="@drawable/period_popup_icon"/>
 
 </skb_template>
 
