--- a/app/src/main/res/drawable/key_normal_bg_3.xml
+++ b/app/src/main/res/drawable/key_normal_bg_3.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#5090FF" />
-    <corners android:radius="15px"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#CEDFFB" />
+            <corners android:radius="30px" />
+        </shape>
+    </item>
+    <item android:bottom="4px">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="#5090FF" />
+            <corners android:radius="30px" />
+        </shape>
+    </item>
+</layer-list>
