--- a/app/src/main/res/drawable/skb_balloon_hint_bg.xml
+++ b/app/src/main/res/drawable/skb_balloon_hint_bg.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#FFFFFF" />
-    <corners android:radius="36px"/>
+    <corners android:radius="36px" />
+    <stroke
+        android:width="1px"
+        android:color="#E1E5EB" />
 </shape>
