焦点跟随调整

--- a/app/src/main/res/layout/float_input_container.xml
+++ b/app/src/main/res/layout/float_input_container.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<!--    <View-->
+<!--        android:layout_width="3840px"-->
+<!--        android:layout_height="2160px"/>-->
 
     <LinearLayout
         android:id="@+id/ime_window"
