--- a/app/src/main/res/xml/skb_sym1.xml
+++ b/app/src/main/res/xml/skb_sym1.xml
@@ -74,7 +74,7 @@
     <key code="-2" label="中 符" width="12.55%p" repeat="true" key_type="1">
       <toggle_state state_id="@string/toggle_en_sym1" label="英 符" code="-2"/>
     </key>
-    <key code="-3" key_type="1" width="12.55%p" label="\?123"/>
+    <key code="-3" key_type="1" width="12.55%p" label="返回"/>
     <key code="62" key_type="0" width="38.056%p" label="Space"/>
     <key label="。" key_type="0" width="12.55%p" >
       <toggle_state state_id="@string/toggle_en_sym1" label="."
