[U][S][tpvIME] fix issue 917858

--- a/app/src/main/res/layout/candidates_container.xml
+++ b/app/src/main/res/layout/candidates_container.xml
@@ -38,6 +38,7 @@
                 android:clickable="true"
                 android:src="@drawable/arrow_left_selector"
                 android:background="@null"
+                android:visibility="invisible"
                 />
 
             <ImageButton
@@ -48,6 +49,7 @@
                 android:clickable="true"
                 android:src="@drawable/arrow_right_selector"
                 android:background="@null"
+                android:visibility="invisible"
                 />
 
             <ViewFlipper
